
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef char TCHAR ;



__attribute__((used)) static int ISSPACE(TCHAR c)
{
    return (c == ' ' || c == '\t');
}
